syntax = "proto3";

package telegram;
option go_package = "github.com/irfandi/celebrum-ai-go/services/backend-api/pkg/pb/telegram";

service TelegramService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message SendMessageRequest {
  string chat_id = 1;
  string text = 2;
  string parse_mode = 3;
}

message SendMessageResponse {
  bool ok = 1;
  string message_id = 2;
  string error = 3;
  // Structured error code for programmatic handling
  // Values: USER_BLOCKED, CHAT_NOT_FOUND, RATE_LIMITED, INVALID_REQUEST, NETWORK_ERROR, TIMEOUT, INTERNAL_ERROR, UNKNOWN
  string error_code = 4;
  // Seconds to wait before retrying (only set for RATE_LIMITED errors)
  int32 retry_after = 5;
}

message HealthCheckRequest {}
message HealthCheckResponse {
  string status = 1;
  string version = 2;
  string service = 3;
}
